--- a/recetas.html
+++ b/recetas.html
@@ -17,8 +17,9 @@
   <div class="main-text pad">
     Aquí están los links a mis principales recetas. <br>
     <br>
+    <a href="recetas/brasil.md">Recetas Brasileiras</a><br>
+    <a href="recetas/indian.md">Recetas de la India</a><br>
     <a href="recetas/arroz.md">Arroz</a><br>
-    <a href="recetas/brasil.md">Postres Brasileños</a><br>
     <a href="recetas/bollos.md">Bollos de cardamomo</a><br>
     <a href="recetas/brownies.md">Brownies</a><br>
     <a href="recetas/carlota.md">Carlota de limón</a><br>
@@ -28,7 +29,6 @@
     <a href="recetas/galletasavena.md">Galletas de avena</a><br>
     <a href="recetas/galletaschocolate.md">Galletas de chispas de chocolate</a><br>
     <a href="recetas/huevos.md">Huevos</a><br>
-    <a href="recetas/indian.md">Recetas de la India</a><br>
     <a href="recetas/masapay.md">Masa para pay</a><br>
     <a href="recetas/masapayrustico.md">Masa para pay rústico</a><br>
     <a href="recetas/masapizza.md">Masa para pizza</a><br>
