--- a/recetas.html
+++ b/recetas.html
@@ -24,7 +24,6 @@
     <a href="recetas/brownies.md">Brownies</a><br>
     <a href="recetas/carlota.md">Carlota de limón</a><br>
     <a href="recetas/conversiones.md">Conversiones</a><br>
-    <a href="recetas/easyrolescanela.md">Roles de canela rápidos</a><br>
     <a href="recetas/galletasalmendra.md">Galletas navideñas de almendra</a><br>
     <a href="recetas/galletasavena.md">Galletas de avena</a><br>
     <a href="recetas/galletaschocolate.md">Galletas de chispas de chocolate</a><br>
@@ -35,7 +34,7 @@
     <a href="recetas/muffinsavena.md">Muffins de avena</a><br>
     <a href="recetas/pancakes.md">Pancakes</a><br>
     <a href="recetas/pancenteno.md">Pan de centeno</a><br>
-    <a href="recetas/panchapata.md">Chapata</a><br>
+    <a href="recetas/panchapata.md">Pan Chapata</a><br>
     <a href="recetas/buns.md">Pan para hamburguesa</a><br>
     <a href="recetas/panmasamadre.md">Pan de masa madre</a><br>
     <a href="recetas/panqueplatano.md">Panqué de plátano</a><br>
@@ -46,6 +45,7 @@
     <a href="recetas/paypina.md">Pay de piña</a><br>
     <a href="recetas/payquesofrio.md">Pay frío de queso</a><br>
     <a href="recetas/rolescanela.md">Roles de Canela</a><br>
+    <a href="recetas/easyrolescanela.md">Roles de canela rápidos</a><br>
     <a href="recetas/salsas.md">Salsas</a><br>
     <a href="recetas/scones.md">Scones</a><br>
     <a href="recetas/rules.pdf">Food rules</a><br>
