--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="main-text pad">
     Un espacio para compartir las <a href="id.html">ideas</a> que encuentro interesantes y algunos de los <a href="pr.html">proyectos</a> en los que he trabajado.<br>
     <br>
-    El <a href="br.html">breviario</a> es una lista de frases que me han gustado y llevo anotando desde el 2010. <br> 
+    El <a href="br.html">breviario</a> es una lista de frases que me han gustado y he anotado desde el 2010. <br> 
     Y un poco más de <a href="in.html">información</a> sobre mi. 
     <br><br>
     <img src="img/yo.png" alt="Yo meroles" height= "200px"/>
