added to breviario

--- a/br.html
+++ b/br.html
@@ -493,6 +493,14 @@
 </li><br>
 <li>Aim for less but better. 
 </li><br>
+<li>Honesty is an engine of simplicity. 
+</li><br>
+<li>Today, well lived, makes yesterday a dream of happiness and every tomorrow a vision of hope. 
+</li><br>
+<li>Freedom is what you do with what's been done to you.  
+</li><br>
+<li>In every work of genius we recognize our own rejected thoughts. 
+</li><br>
 <li>El deterioro del cuerpo es nuestra fe de vida.
 </li><br>
 <li>La verdad no lo parece solo porque lo sea, sino por cómo se diga.
@@ -752,6 +760,8 @@
 <li>El amor es confiar en la casualidad. En la idea de que el mundo puede experimentarse desde el punto de vista de la diferencia. 
 </li><br>
 <li>Así se fija el azar: la absoluta contingencia del encuentro de alguien a quien yo no conocía termina tomando la apariencia de un destino. 
+</li><br>
+<li>Freedom is what you do with what's been done to you.  
 </li><br>
     </ol> 
   </div>
