--- a/br.html
+++ b/br.html
@@ -501,6 +501,8 @@
 </li><br>
 <li>In every work of genius we recognize our own rejected thoughts. 
 </li><br>
+<li>Our thoughts control our feelings. Our feelings control our actions. 
+</li><br>
 <li>El deterioro del cuerpo es nuestra fe de vida.
 </li><br>
 <li>La verdad no lo parece solo porque lo sea, sino por cómo se diga.
@@ -509,7 +511,7 @@
 </li><br>
 <li>Hay que escribir solo para celebrar el hecho de poder hacerlo.
 </li><br>
-<li>Cuando sientes, no sabes; y cuando sabes, ya dejaste de sentir.
+<li>Cuando sientes no sabes, y cuando sabes ya dejaste de sentir.
 </li><br>
 <li>No hay crudo que no sea humilde.
 </li><br>
