--- a/br.html
+++ b/br.html
@@ -503,6 +503,14 @@
 </li><br>
 <li>Our thoughts control our feelings. Our feelings control our actions. 
 </li><br>
+<li>When thought is no more, the passage of time is no more either. 
+</li><br>
+<li>Without the language to describe something, we cannot understand it. 
+</li><br>
+<li>Life is paradox, not contradiction. 
+</li><br>
+<li>When thought is no more, the passage of time is no more either. 
+</li><br>
 <li>El deterioro del cuerpo es nuestra fe de vida.
 </li><br>
 <li>La verdad no lo parece solo porque lo sea, sino por cómo se diga.
