--- a/br.html
+++ b/br.html
@@ -511,6 +511,8 @@
 </li><br>
 <li>When thought is no more, the passage of time is no more either. 
 </li><br>
+<li>When we allow things to be as they are, things allow us to be as we are.  
+</li><br>
 <li>El deterioro del cuerpo es nuestra fe de vida.
 </li><br>
 <li>La verdad no lo parece solo porque lo sea, sino por cómo se diga.
@@ -787,3 +789,9 @@
   </div>
 </body>
 </html>
+
+<!-- 
+git add --all
+git commit -m "comment here"
+git push -u origin main
+ -->
