--- a/br.html
+++ b/br.html
@@ -35,7 +35,11 @@
 </li><br>
 <li>The weak can never forgive. Forgiveness is for the strong ones. 
 </li><br>
+<li>Forgiveness is not something we do for others, it is a gift to ourselves. 
+</li><br>
 <li>Love is all. 
+</li><br>
+<li>Eternity is in love with the productions of time. 
 </li><br>
 <li>You can´t have understanding without facts: the more we remember, the better we are at processing the world. 
 </li><br>
@@ -512,6 +516,8 @@
 <li>When thought is no more, the passage of time is no more either. 
 </li><br>
 <li>When we allow things to be as they are, things allow us to be as we are.  
+</li><br>
+<li>All suffering is caused by wanting what is not present.  
 </li><br>
 <li>El deterioro del cuerpo es nuestra fe de vida.
 </li><br>
