--- a/br.html
+++ b/br.html
@@ -71,6 +71,8 @@
 </li><br>
 <li>You don't have a soul. You are a soul. You have a body. 
 </li><br>
+<li>The human soul needs something to hope for.  
+</li><br>
 <li>Beer is not the answer. Beer? is the question. Yes is the answer. 
 </li><br>
 <li>Listen, smile, agree. And then do whatever the fuck you were going to do anyways. 
@@ -513,7 +515,7 @@
 </li><br>
 <li>Life is paradox, not contradiction. 
 </li><br>
-<li>When thought is no more, the passage of time is no more either. 
+<li>Life really does begin at forty. Up until then you are just doing research.  
 </li><br>
 <li>When we allow things to be as they are, things allow us to be as we are.  
 </li><br>
