added ideas and breviario

--- a/br.html
+++ b/br.html
@@ -521,6 +521,8 @@
 </li><br>
 <li>All suffering is caused by wanting what is not present.  
 </li><br>
+<li>All good things are wild and free. 
+</li><br>
 <li>El deterioro del cuerpo es nuestra fe de vida.
 </li><br>
 <li>La verdad no lo parece solo porque lo sea, sino por cómo se diga.
@@ -766,6 +768,12 @@
 <li>Mientras los diarios sigan abriendo con noticias negativas es que la cosa va bien. Porque lo noticiable es la excepción. 
 </li><br>
 <li>No entiendo la vida, pero sigo aquí porque me gusta comer. 
+</li><br>
+<li>No hay ideas originales. Cualquier idea es la suma inevitable de todas las ideas que existieron en el pasado. 
+</li><br>
+<li>Los planes deben tomar en cuenta que todo va a cambiar. 
+</li><br>
+<li>Somos la naturaleza creando nuevas formas.  
 </li><br>
 <li>Toma la decisión de irte en un buen día. No cuando la estés pasando mal. 
 </li><br>
