--- a/recetas.html
+++ b/recetas.html
@@ -39,6 +39,7 @@
     <a href="recetas/panmasamadre.md">Pan de masa madre</a><br>
     <a href="recetas/panqueplatano.md">Panqué de plátano</a><br>
     <a href="recetas/pastelchocolate.md">Pastel de chocolate</a><br>
+    <a href="recetas/pastelzanahoria.md">Pastel de zanahoria</a><br>
     <a href="recetas/pastes.md">Pastes</a><br>
     <a href="recetas/paymanzana.md">Pay de manzana</a><br>
     <a href="recetas/paynuez.md">Pay de nuez</a><br>
