--- a/br.html
+++ b/br.html
@@ -523,6 +523,10 @@
 </li><br>
 <li>All good things are wild and free. 
 </li><br>
+<li>Choose your regrets. Which ones can you live with?
+</li><br>
+<li>Discipline is self love. It's your future self pulling you towards something better.  
+</li><br>
 <li>El deterioro del cuerpo es nuestra fe de vida.
 </li><br>
 <li>La verdad no lo parece solo porque lo sea, sino por cómo se diga.
