--- a/br.html
+++ b/br.html
@@ -527,6 +527,8 @@
 </li><br>
 <li>Discipline is self love. It's your future self pulling you towards something better.  
 </li><br>
+<li>You don't have to be worthy, but you have to know what you want.
+</li><br>
 <li>El deterioro del cuerpo es nuestra fe de vida.
 </li><br>
 <li>La verdad no lo parece solo porque lo sea, sino por cómo se diga.
