--- a/br.html
+++ b/br.html
@@ -529,6 +529,16 @@
 </li><br>
 <li>You don't have to be worthy, but you have to know what you want.
 </li><br>
+<li>Without motion there's no time and there's no matter. 
+</li><br>
+<li>Have no cherished outcome. 
+</li><br>
+<li>Learn to use the proper tools, and learn to use them properly.
+</li><br>
+<li>It is the nature of the one to manifest. 
+</li><br>
+<li>You will be notified. 
+</li><br>
 <li>El deterioro del cuerpo es nuestra fe de vida.
 </li><br>
 <li>La verdad no lo parece solo porque lo sea, sino por cómo se diga.
