--- a/br.html
+++ b/br.html
@@ -539,6 +539,10 @@
 </li><br>
 <li>You will be notified. 
 </li><br>
+<li>The obstacle is the path.
+</li><br>
+<li>-
+</li><br>
 <li>El deterioro del cuerpo es nuestra fe de vida.
 </li><br>
 <li>La verdad no lo parece solo porque lo sea, sino por cómo se diga.
