--- a/br.html
+++ b/br.html
@@ -541,7 +541,7 @@
 </li><br>
 <li>The obstacle is the path.
 </li><br>
-<li>-
+<li>Your heroes are your idealized self. 
 </li><br>
 <li>El deterioro del cuerpo es nuestra fe de vida.
 </li><br>
@@ -802,6 +802,8 @@
 <li>Acá todo podía suceder. Allá ya había sucedido casi todo. Como si la porción del azar ya se hubiera agotado. 
 </li><br>
 <li>La cercanía causa conflicto. 
+</li><br>
+<li>El universo premia la acción.  
 </li><br>
 <li>Nada tiene que ser difícil. Las cosas se complican cuando buscamos algo que no hay. 
 </li><br>
