--- a/br.html
+++ b/br.html
@@ -543,6 +543,18 @@
 </li><br>
 <li>Your heroes are your idealized self. 
 </li><br>
+<li>I am the mate and companion of people all just as immortal and fathomless as myself. 
+</li><br>
+<li>A good life isn't an easy life. A good life makes you into a good person, and that is a hard life. 
+</li><br>
+<li>Let me be water. Let me be water. Let me be water. 
+</li><br>
+<li>A forma mais terrível de naufrágio é não partir. 
+</li><br>
+<li>Te extraño. Dime palabras bonitas. Cuéntame tus planes. 
+</li><br>
+<li>El universo premia la acción. 
+</li><br>
 <li>El deterioro del cuerpo es nuestra fe de vida.
 </li><br>
 <li>La verdad no lo parece solo porque lo sea, sino por cómo se diga.
