--- a/br.html
+++ b/br.html
@@ -547,9 +547,15 @@
 </li><br>
 <li>A good life isn't an easy life. A good life makes you into a good person, and that is a hard life. 
 </li><br>
+<li>Doing nothing is the hardest work there is. 
+</li><br>
+<li>Strive to be better than yesterday. But remember to massively fuck up from time to time to reset the difficulty level. 
+</li><br>
 <li>Let me be water. Let me be water. Let me be water. 
 </li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
+</li><br>
+<li>No vemos las cosas como son. Vemos las cosas como somos.  
 </li><br>
 <li>Te extraño. Dime palabras bonitas. Cuéntame tus planes. 
 </li><br>
