--- a/br.html
+++ b/br.html
@@ -553,13 +553,13 @@
 </li><br>
 <li>Let me be water. Let me be water. Let me be water. 
 </li><br>
+<li>Fire was older than fear, and it held the truth. 
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
 <li>No vemos las cosas como son. Vemos las cosas como somos.  
 </li><br>
 <li>Te extraño. Dime palabras bonitas. Cuéntame tus planes. 
-</li><br>
-<li>El universo premia la acción. 
 </li><br>
 <li>El deterioro del cuerpo es nuestra fe de vida.
 </li><br>
