--- a/br.html
+++ b/br.html
@@ -557,6 +557,8 @@
 </li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
+<li>¿Qué hay de malo en la paz, que su inspiración no perdura?   
+</li><br>
 <li>No vemos las cosas como son. Vemos las cosas como somos.  
 </li><br>
 <li>Te extraño. Dime palabras bonitas. Cuéntame tus planes. 
