--- a/pr.html
+++ b/pr.html
@@ -21,7 +21,7 @@
     <ul>
       <li>El modelo de termodinámica de la composta</li>
       <li>Las mesas de origenplano y sus <a href="docs/snow.gif">planos</a></li>
-      <li>El paper de trilateración</li>
+      <li>Los artículos académicos</li>
     </ul> 
   </div>
 
