--- a/br.html
+++ b/br.html
@@ -555,6 +555,8 @@
 </li><br>
 <li>Fire was older than fear, and it held the truth. 
 </li><br>
+<li>Maybe beauty is truth without the filter of what the world thinks it should be.  
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
 <li>¿Qué hay de malo en la paz, que su inspiración no perdura?   
