--- a/br.html
+++ b/br.html
@@ -557,9 +557,21 @@
 </li><br>
 <li>Maybe beauty is truth without the filter of what the world thinks it should be.  
 </li><br>
+<li>Midlife is when you reach the top of the ladder and find that it was against the wrong wall.   
+</li><br>
+<li>Anyone can do his work, however hard, for one day. Anyone can live sweetly, patiently, lovingly, purely, till the sun goes down.
+</li><br>
+<li>Failing is scary. Wasting your life is dangerous.    
+</li><br>
+<li>A great life is just a series of great days.    
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
+<li>A maior felicidade que existe é a silenciosa certeza de que vale a pena viver.
+</li><br>
 <li>¿Qué hay de malo en la paz, que su inspiración no perdura?   
+</li><br>
+<li>El que no entiende, juzga. Y el que juzga, condena.   
 </li><br>
 <li>No vemos las cosas como son. Vemos las cosas como somos.  
 </li><br>
