--- a/br.html
+++ b/br.html
@@ -565,6 +565,10 @@
 </li><br>
 <li>A great life is just a series of great days.    
 </li><br>
+<li>Feeling uncertain doesn't mean you are on the wrong path. It means you are on a real path. Stay in the room.
+</li><br>
+<li>No amount of anxiety makes any difference to what's going to happen. 
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
 <li>A maior felicidade que existe é a silenciosa certeza de que vale a pena viver.
