--- a/br.html
+++ b/br.html
@@ -569,6 +569,8 @@
 </li><br>
 <li>No amount of anxiety makes any difference to what's going to happen. 
 </li><br>
+<li>Being a good person is easy. But being a person? That's fucking hard.  
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
 <li>A maior felicidade que existe é a silenciosa certeza de que vale a pena viver.
