--- a/br.html
+++ b/br.html
@@ -571,6 +571,8 @@
 </li><br>
 <li>Being a good person is easy. But being a person? That's fucking hard.  
 </li><br>
+<li>All roads lead to you. Even those I took to forget you.  
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
 <li>A maior felicidade que existe é a silenciosa certeza de que vale a pena viver.
