--- a/br.html
+++ b/br.html
@@ -573,9 +573,19 @@
 </li><br>
 <li>All roads lead to you. Even those I took to forget you.  
 </li><br>
+<li>The grass is greener where you water it.  
+</li><br>
+<li>Were I with you I would remain silent. But since we are separated I must write.    
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
 <li>A maior felicidade que existe é a silenciosa certeza de que vale a pena viver.
+</li><br>
+<li>Eu que venho da dor de viver. E não a quero mais. Quero a vibração do alegre.
+</li><br>
+<li>No es el vacío lo que duele. Es la prisa por llenarlo.    
+</li><br>
+<li>Uno da consejos porque ya fue estúpido.     
 </li><br>
 <li>¿Qué hay de malo en la paz, que su inspiración no perdura?   
 </li><br>
