--- a/br.html
+++ b/br.html
@@ -577,11 +577,13 @@
 </li><br>
 <li>Were I with you I would remain silent. But since we are separated I must write.    
 </li><br>
+<li>Nothing makes a room feel emptier than wanting someone in it. 
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
 <li>A maior felicidade que existe é a silenciosa certeza de que vale a pena viver.
 </li><br>
-<li>Eu que venho da dor de viver. E não a quero mais. Quero a vibração do alegre.
+<li>El cierre quizás se trate de estar bien con lo incompleto, y que no todo necesita ser resuelto.
 </li><br>
 <li>No es el vacío lo que duele. Es la prisa por llenarlo.    
 </li><br>
