--- a/br.html
+++ b/br.html
@@ -579,11 +579,15 @@
 </li><br>
 <li>Nothing makes a room feel emptier than wanting someone in it. 
 </li><br>
+<li>We cannot have free will without a form of fate to push against. 
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
 <li>A maior felicidade que existe é a silenciosa certeza de que vale a pena viver.
 </li><br>
 <li>El cierre quizás se trate de estar bien con lo incompleto, y que no todo necesita ser resuelto.
+</li><br>
+<li>Entre las cosas que no podemos cambiar están el pasado, el presente, y el futuro.   
 </li><br>
 <li>No es el vacío lo que duele. Es la prisa por llenarlo.    
 </li><br>
