--- a/br.html
+++ b/br.html
@@ -581,6 +581,8 @@
 </li><br>
 <li>We cannot have free will without a form of fate to push against. 
 </li><br>
+<li>Action itself has meaning. Independent of the outcome.  
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
 <li>A maior felicidade que existe é a silenciosa certeza de que vale a pena viver.
