--- a/br.html
+++ b/br.html
@@ -583,6 +583,8 @@
 </li><br>
 <li>Action itself has meaning. Independent of the outcome.  
 </li><br>
+<li>Act on your highest excitement, to the best of your ability, with no insistence on the outcome.   
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
 <li>A maior felicidade que existe é a silenciosa certeza de que vale a pena viver.
