--- a/br.html
+++ b/br.html
@@ -589,6 +589,8 @@
 </li><br>
 <li>A maior felicidade que existe é a silenciosa certeza de que vale a pena viver.
 </li><br>
+<li>No se cansen de ser buenos, aunque no sirva para mucho, sirve para no arrepentirse con uno mismo. 
+</li><br>
 <li>El cierre quizás se trate de estar bien con lo incompleto, y que no todo necesita ser resuelto.
 </li><br>
 <li>Entre las cosas que no podemos cambiar están el pasado, el presente, y el futuro.   
