--- a/recetas.html
+++ b/recetas.html
@@ -49,6 +49,7 @@
     <a href="recetas/easyrolescanela.md">Roles de canela rápidos</a><br>
     <a href="recetas/salsas.md">Salsas</a><br>
     <a href="recetas/scones.md">Scones</a><br>
+    <a href="recetas/tatin.md">Tarta Tatin</a><br>
     <a href="recetas/rules.pdf">Food rules</a><br>
   </div>
   
