--- a/br.html
+++ b/br.html
@@ -585,6 +585,8 @@
 </li><br>
 <li>Act on your highest excitement, to the best of your ability, with no insistence on the outcome.   
 </li><br>
+<li>Its nice to be important but its more important to be nice.
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
 <li>A maior felicidade que existe é a silenciosa certeza de que vale a pena viver.
