--- a/pr.html
+++ b/pr.html
@@ -15,13 +15,9 @@
   
   <div class="h3 pad">Proyectos</div>
   <div class="main-text pad">
-    ** Sección en construcción **<br>
-    <br>
-    Aquí algunos de mis proyectos:
     <ul>
-      <li>El modelo de termodinámica de la composta</li>
-      <li>Las mesas de origenplano y sus <a href="docs/snow.gif">planos</a></li>
-      <li>Los artículos académicos</li>
+      <li>En 2025 terminé mi doctorado en la Universidad de Toronto, aquí pueden encontrar mis <a href="https://scholar.google.com/citations?hl=en&user=EftTDjgAAAAJ&view_op=list_works&gmla=AH8HC4x6GLWeJd0ptxbz2GbNq9XBpm7jxk6y0Fz8CklzFNXVg5scrFKV3pyfp7f_S482cD1Wv-gj3_MazIsyv9At">artículos académicos.</a></li>
+      <li>Actualmente estoy montando <a href="https://bamba.mx">Bamba Taller.</a></li>
     </ul> 
   </div>
 
