--- a/br.html
+++ b/br.html
@@ -587,6 +587,8 @@
 </li><br>
 <li>Its nice to be important but its more important to be nice.
 </li><br>
+<li>Failure is not a failure.
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
 <li>A maior felicidade que existe é a silenciosa certeza de que vale a pena viver.
