--- a/recetas.html
+++ b/recetas.html
@@ -22,6 +22,7 @@
     <a href="recetas/brownies.md">Brownies</a><br>
     <a href="recetas/carlota.md">Carlota de limón</a><br>
     <a href="recetas/flan.md">Flan napolitano</a><br>
+    <a href="recetas/granola.md">Granola</a><br>
     <a href="recetas/galletasalmendra.md">Galletas navideñas de almendra</a><br>
     <a href="recetas/galletasavena.md">Galletas de avena</a><br>
     <a href="recetas/galletaschocolate.md">Galletas de chispas de chocolate</a><br>
