--- a/br.html
+++ b/br.html
@@ -589,6 +589,12 @@
 </li><br>
 <li>Failure is not a failure.
 </li><br>
+<li>Happiness is the absence of the striving for happiness.
+</li><br>
+<li>You are made of stardust and poo particles. Don't get ahead of yourself.
+</li><br>
+<li>Choose discomfort over dissatisfaction. 
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
 <li>A maior felicidade que existe é a silenciosa certeza de que vale a pena viver.
