--- a/br.html
+++ b/br.html
@@ -595,6 +595,8 @@
 </li><br>
 <li>Choose discomfort over dissatisfaction. 
 </li><br>
+<li>The point isn't to make yourself feel that you're a part of everything, but to stop for one minute insisting that you're not. 
+</li><br>
 <li>A forma mais terrível de naufrágio é não partir. 
 </li><br>
 <li>A maior felicidade que existe é a silenciosa certeza de que vale a pena viver.
